fix(ui): MetricsTableOptions - add separator only between visible groups

--- a/packages/ui/src/components/metrics-table-options/metrics-table-options.module.css
+++ b/packages/ui/src/components/metrics-table-options/metrics-table-options.module.css
@@ -1,4 +1,4 @@
-.group + .group {
+:not(.group:empty) ~ .group {
   margin-top: calc(var(--space-xxxsmall) / 2);
   padding-top: calc(var(--space-xxxsmall) / 2);
   border-top: 1px solid var(--color-outline);
